--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"type": "library",
 	"require": {
 		"php": ">=5.4.0",
-		"yiisoft/yii2": "2.0.8"
+		"yiisoft/yii2": "dev-master"
 	},
 	"provide": {
 		"bower-asset/jquery": "*",
