--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,15 @@
 	"type": "library",
 	"require": {
 		"php": ">=5.4.0",
-		"yiisoft/yii2": "dev-master"
+		"yiisoft/yii2": "2.0.12"
 	},
-	"provide": {
+	"replace": {
+		"bower-asset/jquery": "*",
+		"bower-asset/jquery.inputmask": "*",
+		"bower-asset/punycode": "*",
+		"bower-asset/yii2-pjax": "*"
+	},
+	"conflict": {
 		"bower-asset/jquery": "*",
 		"bower-asset/jquery.inputmask": "*",
 		"bower-asset/punycode": "*",
